=== Release 0.2
* Creating a page for each feature file


=== Release 0.1 / 2012-11-17
Initial release with single page basic report